# crmc

./: CMakeLists.txt  README  TODO
CMakeModules/: FindBoost.cmake  FindHepMC.cmake  FindRoot.cmake
ExampleAnalyser/: Makefile
ExampleAnalyser/files/: test.hepmc
ExampleAnalyser/src/: analysis.cc  analysis.h
src/: CRMC.cc  CRMC.h  CRMCconfig.h.in  CRMCinterface.cc  CRMCinterface.h-HEPMC-TEMPLATE  CRMCoptions.cc  CRMCoptions.h  CRMCtrapfpe.c  OutputPolicyHepMC.cc  OutputPolicyHepMC.h  OutputPolicyLHE.h  OutputPolicyNone.cc  OutputPolicyNone.h  OutputPolicyROOT.cc  OutputPolicyROOT.h  crmc-aaa.f  crmc.param.in  crmcMain.cc  epos.inc-HEPMC-TEMPLATE  models.F
src/dpmjet/3.0-6/: CMakeLists.txt  dpmjet-crmc.f  dpmjet3.0-6.f  phojet1.12-35c4.f  pythia6115dpm3v1.f-HEPMCTEMPLATE
src/dpmjet/3.2017-1/: CMakeLists.txt  dpmjet.f-HEPMCTEMPLATE  dpmjet_epos.f  phojet.f-HEPMCTEMPLATE  pythia-6427_cors.f-HEPMCTEMPLATE
src/epos/: CMakeLists.txt  epos-bas.f  epos-dky.f  epos-ems.f  epos-ids.f  epos-int.f  epos-uti.f
src/fluka/: fluka_epos.f
src/gheisha/: CMakeLists.txt  gheisha_epos.f
src/hijing/: CMakeLists.txt  hijing_epos.f  hipyset1.35.f-HEPMC-TEMPLATE
src/phojet/: CMakeLists.txt  phojet_epos.f
src/pythia/: CMakeLists.txt  pythia-6.4.28.f-HEPMC-TEMPLATE  pythia6115.f-HEPMC-TEMPLATE  pythia6215.f-HEPMC-TEMPLATE  pythia_epos.f
src/qgsjet/: CMakeLists.txt
src/qgsjetII/: CMakeLists.txt  qgsjetII_epos.f
src/qgsjetII-04/: CMakeLists.txt  qgsjet-II-04.f  qgsjetII_epos.f
src/sibyll/: CMakeLists.txt  particle_codes_21.txt  sibyll2.3c.f  sibyll_epos.f
tabs/: epos.inics  epos.inics.lhc  epos.iniev  epos.inirj  epos.initl
